--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -9,3 +9,4 @@ size.user.cognome=Il cognome deve essere composto da minimo 2 e massimo 100 cara
 size.credentials.username=Username deve essere composto da minimo 4 e massimo 20 caratteri
 size.credentials.password=La password deve essere composta da minimo 6 e massimo 20 caratteri
 duplicate.credentials.username=Questo username esiste gia'
+film.inesistente=Il film che hai cercato non esiste, prova con un altro nome
