Rifattorizzata grafica per spettacoli (in parte) e login

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -12,3 +12,4 @@ duplicate.credentials.username=Questo username esiste gia'
 film.inesistente=Il film che hai cercato non esiste, prova con un altro nome!
 prenotazione.riuscita=La prenotazione è stata effettuata con successo!
 prenotazione.fallita=Sei già prenotato allo spettacolo selezionato
+errore.autenticazione=Errore durante l'autenticazione; assicurati di aver compilato tutti i campi
