--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -6,7 +6,7 @@ required.credentials.username=Username e' un campo obbligatorio
 required.credentials.password=Password e' un campo obbligatorio
 size.user.nome=Il nome deve essere composto da minimo 2 e massimo 100 caratteri
 size.user.cognome=Il cognome deve essere composto da minimo 2 e massimo 100 caratteri
-size.credentials.username=Username deve essere composto da minimo 4 e massimo 20 caratteri
+size.credentials.username=L''username deve essere composto da minimo 4 e massimo 20 caratteri
 size.credentials.password=La password deve essere composta da minimo 6 e massimo 20 caratteri
 duplicate.credentials.username=Questo username esiste gia'
 film.inesistente=Il film che hai cercato non esiste, prova con un altro nome!
