--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -13,3 +13,4 @@ film.inesistente=Il film che hai cercato non esiste, prova con un altro nome!
 prenotazione.riuscita=La prenotazione è stata effettuata con successo!
 prenotazione.fallita=Sei già prenotato allo spettacolo selezionato
 errore.autenticazione=Errore durante l'autenticazione; assicurati di aver compilato tutti i campi
+duplicato.film=Il film che vuoi inserire esiste già; prova con un altro titolo
