--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -15,3 +15,4 @@ prenotazione.fallita=Sei già prenotato allo spettacolo selezionato
 errore.autenticazione=Errore durante l'autenticazione; assicurati di aver compilato tutti i campi
 duplicato.film=Il film che vuoi inserire esiste già; prova con un altro titolo
 film.inserito=Hai inserito con successo il film:
+prenotazione.noPosti= Non ci sono posti disponibili per lo spettacolo che hai selezionato!
